--- a/app/views/cadastro_beneficiario/index.html.erb
+++ b/app/views/cadastro_beneficiario/index.html.erb
@@ -1,2 +1,53 @@
-<h1>CadastroBeneficiario#index</h1>
-<p>Find me in app/views/cadastro_beneficiario/index.html.erb</p>
+<h1>Cadastro de Beneficiarios</h1>
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<table class="table table-bordered">
+				<thead>
+					<tr>
+						<th>
+							Nome
+						</th>
+						<th>
+							Idade
+						</th>
+						<th>
+				      Endereço
+						</th>
+						<th>
+							Qtd de Pessoas
+						</th>
+            <th>
+              Renda($)
+            </th>
+            <th>
+              Qtd_Vulneraveis
+            </th>
+            <th>
+              Telefone
+            </th>
+					</tr>
+				</thead>
+				<tbody>
+          <% @beneficiarios.each do |p| %>
+					<tr>
+						<td>
+							<%= p.nome %>
+						</td>
+						<td>
+							TB - Monthly
+						</td>
+						<td>
+							01/04/2012
+						</td>
+						<td>
+							Default
+						</td>
+					</tr>
+          <% end %>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
