--- a/app/views/in_needs/index.html.erb
+++ b/app/views/in_needs/index.html.erb
@@ -1,5 +1,5 @@
-<table class="table">
-  <tr>
+<table class="table table-hover">
+  <tr style="color:white; background-color:DimGrey">
     <th>Nome</th>
     <th>CPF</th>
     <th>Data de Nascimento</th>
@@ -8,6 +8,7 @@
     <th>Número de Pessoas</th>
     <th>Renda Familiar</th>
     <th>Itens</th>
+    <th>Ações</th>
   </tr>
 
   <% @in_needs.each do |person| %>
@@ -20,6 +21,7 @@
       <td><%= person.n_members %></td>
       <td><%= person.income %></td>
       <td><%= person.items %></td>
+      <td><button type="button" title="Doar <%=person.items%>" class="btn btn-success btn-xs">Doar</button></td>
     </tr>
   <% end %>
 
