--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,24 +2,31 @@
 <html>
   <head>
     <title>App</title>
-    <%= csrf_meta_tags %>
+
     <style>
-table {
+    table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 60%;
-}
+    width: 40%;
+    }
 
-td, th {
+    table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 40%;
+    }
+
+    td, th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
-}
+    }
 
-tr:nth-child(even) {
+    tr:nth-child(even) {
     background-color: #dddddd;
-}
-</style>
+    }
+    </style>
+    <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
