--- a/app/views/in_needs/index.html.erb
+++ b/app/views/in_needs/index.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <table class="table table-hover">
   <tr style="color:white; background-color:DimGrey">
     <th>Nome</th>
@@ -26,3 +28,5 @@
   <% end %>
 
 </table>
+
+</div>
