Integração entre equipes

--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -31,4 +31,7 @@
   <p>
     <%= f.submit "Cadastrar Doação"%>
   </p>
+  <p>
+    <button><%= link_to "Voltar", donations_path %> </button>
+  </p>
 <% end %>
