--- a/app/views/needies/new.html.erb
+++ b/app/views/needies/new.html.erb
@@ -22,4 +22,7 @@
   <p>
     <%= f.submit "Cadastrar Pessoa" %>
   </p>
+  <p>
+    <button><%= link_to "Voltar", donations_path %> </button>
+  </p>
 <% end %>
