--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body class="container">
+    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <%= image_tag("logo.png") %>
+</nav>
     <%= yield %>
   </body>
 </html>
